--- a/letscss.css
+++ b/letscss.css
@@ -1,5 +1,7 @@
 html {
-  background: url(homecover2.jpg);
+  height: 100%;
+  background: url(indexcover.jpg) no-repeat center center;
+  background-size: cover;
 }
 h3{
   background-color: background: #CCC;
@@ -7,8 +9,8 @@ h3{
 }
 .top {
   background-color: background: #CCC;
-  opacity: 9;
-  background-color: #5555ff;
+  opacity: .2;
+  background-color: white;
   position: fixed;
   margin-left: -.6%;
   z-index: 9999px;
@@ -41,7 +43,7 @@ li {
     font-size: 150%;
 }
 a:link {
-  color: rgb(246, 246, 246); text-decoration: none;
+  color: black; text-decoration: none;
 }
 a:active {
   color: gold; text-decoration: none;
@@ -50,7 +52,7 @@ a:visited {
   color: rgb(246, 246, 246); text-decoration: none;
 }
 a:hover {
-  color: black; text-decoration: none;
+  color: blue; text-decoration: none;
 }
 .Welcome {
   font-size: 100px;
