--- a/css/title.css
+++ b/css/title.css
@@ -1,6 +1,6 @@
 html {
   height: 100%;
-  background: url(indexcover.jpg) no-repeat center center;
+  background: url(../photos/indexcover.jpg) no-repeat center center;
   background-size: cover;
 }
 h3{
