--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 html {
   height: 100%;
-  background: url(indexcover.jpg) no-repeat center center;
+  background: url(../photos/homebackground2.jpg) no-repeat center center;
   background-size: cover;
 }
 h3{
@@ -92,10 +92,10 @@ a:hover {
   }
 #bottompic{
   position: absolute;
-  left: 34%;
-  top: 80%;
-  width: 417px;
-  height: 63px;
+  left: 37.5%;
+  top: 30%;
+  width: 317px;
+  height: 317px;
   z-index: 999px;
 }
 .Begin_Journey {
@@ -125,4 +125,84 @@ a:hover {
   width: 617px;
   height: 111px;
   z-index: 27;
+}
+#algebracircle{
+  position: absolute;
+  left: 14%;
+  top: 30%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#geometrycircle{
+  position: absolute;
+  left: 64%;
+  top: 80%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#trigcircle{
+  position: absolute;
+  left: 74%;
+  top: 40%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#Math{
+  font-size: 35px;
+  font-family: "Helvetica";
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 39.5%;
+  top: 36.5%;
+  width: 125px;
+  height: 44px;
+  z-index: 32;
+}
+#Science{
+  font-size: 35px;
+  font-family: "Helvetica";
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 49.0%;
+  top: 36.5%;
+  width: 125px;
+  height: 44px;
+  z-index: 32;
+}
+#History{
+  font-size: 35px;
+  font-family: "Helvetica";
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 39.5%;
+  top: 53.5%;
+  width: 125px;
+  height: 44px;
+  z-index: 32;
+}
+#Comp{
+  font-size: 35px;
+  font-family: "Helvetica";
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 48.5%;
+  top: 53.5%;
+  width: 125px;
+  height: 44px;
+  z-index: 32;
 }
