--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 html {
   height: 100%;
-  background: url(../photos/homebackground2.jpg) no-repeat center center;
+  background: url(../photos/homebackground4.jpg) no-repeat center center;
   background-size: cover;
 }
 h3{
@@ -187,7 +187,7 @@ a:hover {
   text-align: center;
   position: absolute;
   left: 39.5%;
-  top: 53.5%;
+  top: 50.5%;
   width: 125px;
   height: 44px;
   z-index: 32;
@@ -201,8 +201,95 @@ a:hover {
   text-align: center;
   position: absolute;
   left: 48.5%;
-  top: 53.5%;
+  top: 50.5%;
   width: 125px;
   height: 44px;
   z-index: 32;
+}
+#biocircle{
+  position: absolute;
+  left: 34%;
+  top: 15%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#chemcircle{
+  position: absolute;
+  left: 20%;
+  top: 80%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#physicscircle{
+  position: absolute;
+  left: 84%;
+  top: 70%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#history1{
+  position: absolute;
+  left: 47%;
+  top: 80%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#history2{
+  position: absolute;
+  left: 64%;
+  top: 30%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#history3{
+  position: absolute;
+  left: 5%;
+  top: 10%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#comp1{
+  position: absolute;
+  left: 10%;
+  top: 55%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#comp2{
+  position: absolute;
+  left: 34%;
+  top: 70%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+#comp3{
+  position: absolute;
+  left: 84%;
+  top: 25%;
+  width: 117px;
+  height: 117px;
+  z-index: 999px;
+}
+.bubbles{
+
+  width:150px;
+  height:150px;
+  background: none;
+  opacity: 0.7;
+  transition: 0.5s ease-in-out;
+
+}
+
+.bubbles:hover{
+  opacity: 2;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.5);
 }
