--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 html {
   height: 100%;
-  background: url(indexcover.jpg) no-repeat center center;
+  background: url(../photos/homebackground1.jpg) no-repeat center center;
   background-size: cover;
 }
 h3{
@@ -113,6 +113,20 @@ a:hover {
   background-color: none;
 }
 .signup1{
+  font-size: 100px;
+  font-family: "Helvetica";
+  font-weight: lighter;
+  color: rgb(246, 246, 246);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  left: 3%;
+  top: 5%;
+  width: 617px;
+  height: 111px;
+  z-index: 27;
+}
+.login1{
   font-size: 100px;
   font-family: "Helvetica";
   font-weight: lighter;
