--- a/css/title.css
+++ b/css/title.css
@@ -71,10 +71,10 @@ a:hover {
 #sunimage1{
     background-image: url("Layer 10.png");
     position: absolute;
-    left: 80%;
-    top: 15%;
-    width: 300px;
-    height: 50px;
+    left: 82.5%;
+    top: 16%;
+    width: 15%;
+    height: 5%;
     z-index: 999px;
   }
 .login{
@@ -99,14 +99,14 @@ a:hover {
   z-index: 999px;
 }
 .Begin_Journey {
-  font-size: 30px;
+  font-size: 220%;
   font-family: "Helvetica";
   font-weight: lighter;
   color: rgb(246, 246, 246);
   line-height: 1.2;
   text-align: center;
   position: absolute;
-  left: 42%;
+  left: 40.5%;
   top: 81.5%;
   z-index: 999;
   border: none;
