--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,11 @@ html {
   background: url(../photos/homebackground4.jpg) no-repeat center center;
   background-size: cover;
 }
+body, html {
+  font-family: "helvetica";
+  padding: 0;
+  margin: 0;
+}
 h3{
   background-color: background: #CCC;
   opacity:0.7; color: black; position: relative;
@@ -37,7 +42,6 @@ li {
     margin-top: 1.5%;
     margin-right:-1%;
     margin-bottom: 1.5%;
-    font-family: "helvetica";
     font-weight:lighter;
     color: inherit;
     font-size: 150%;
@@ -150,62 +154,6 @@ a:hover {
   height: 117px;
   z-index: 999px;
 }
-#Math{
-  font-size: 35px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(255, 255, 255);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 39.5%;
-  top: 36.5%;
-  width: 125px;
-  height: 44px;
-  z-index: 32;
-}
-#Science{
-  font-size: 35px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(255, 255, 255);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 49.0%;
-  top: 36.5%;
-  width: 125px;
-  height: 44px;
-  z-index: 32;
-}
-#History{
-  font-size: 35px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(255, 255, 255);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 39.5%;
-  top: 50.5%;
-  width: 125px;
-  height: 44px;
-  z-index: 32;
-}
-#Comp{
-  font-size: 35px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(255, 255, 255);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 48.5%;
-  top: 50.5%;
-  width: 125px;
-  height: 44px;
-  z-index: 32;
-}
 #biocircle{
   position: absolute;
   left: 34%;
@@ -302,4 +250,47 @@ body{
 .csbubbles {
   display: none;
   opacity: 0;
+}
+.main-nav-wrapper {
+  text-align: center;
+  width: 100%;
+  display: inline-block;
+}
+.main-nav-wrapper::before {
+  display: inline-block;
+  height: 100vh;
+  content: '';
+  vertical-align: middle;
+}
+.main-nav {
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 5000px;
+  width: 250px;
+  height: 250px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.main-nav > div {
+  box-sizing: border-box;;
+  display: inline-block;
+  margin: 0;
+  width: 50%;
+  height: 50%;
+  text-align: center;
+  font-size: 35px;
+  float: left;
+}
+#Math, #Science {
+  border-bottom: 5px solid #FFF;
+}
+/* Change this to change the height of math/science text */
+#Math > div, #Science > div {
+  margin-top: 50px;
+}
+#History, #Math {
+  border-right: 5px solid #FFF;
+}
+/* Change this to change the height of comp/history */
+#Comp > div, #History > div {
+  margin-top: 10px;
 }
