--- a/css/subject.css
+++ b/css/subject.css
@@ -136,3 +136,11 @@ h1{
   position: relative;
   z-index: -999;
 }
+#subjectmainbackground{
+  margin-top: 3%;
+  width: 100%;
+  height: 100%;
+}
+#subjecttitle{
+  
+}
