--- a/css/title.css
+++ b/css/title.css
@@ -73,7 +73,7 @@ a:hover {
   z-index: 27;
   padding: auto;
 }
-#sunimage1{
+#signup{
     background-image: url("Layer 10.png");
     position: absolute;
     left: 82.5%;
