--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,6 @@ h3{
   background-color: white;
   position: fixed;
   margin-left: -.6%;
-  z-index: 9999px;
   margin-top: -.6%;
 }
 #logoimage {
@@ -33,7 +32,7 @@ ul {
 }
 li {
     position: center;
-    float: right;
+    float: left;
     display: block;
     height: 1%;
     width: 228px;
@@ -275,20 +274,20 @@ body{
   display: inline-block;
   margin: 0;
   width: 50%;
-  height: 50%;
+  height: 30%;
   text-align: center;
-  font-size: 35px;
+  font-size: 30px;
   float: left;
 }
 #Math, #Science {
-  border-bottom: 5px solid #FFF;
+  border-bottom: none;
 }
 /* Change this to change the height of math/science text */
 #Math > div, #Science > div {
-  margin-top: 50px;
+  margin-top: none;
 }
 #History, #Math {
-  border-right: 5px solid #FFF;
+  border-right: none;
 }
 /* Change this to change the height of comp/history */
 #Comp > div, #History > div {
