--- a/css/subject.css
+++ b/css/subject.css
@@ -30,7 +30,7 @@ ul {
 }
 li {
     position: center;
-    float: right;
+    float: left;
     display: block;
     height: 1%;
     width: 228px;
@@ -142,5 +142,5 @@ h1{
   height: 100%;
 }
 #subjecttitle{
-  
+
 }
