--- a/css/title.css
+++ b/css/title.css
@@ -104,18 +104,19 @@ a:hover {
   z-index: 999px;
 }
 .Begin_Journey {
-  font-size: 220%;
+  font-size: 30px;
   font-family: "Helvetica";
   font-weight: lighter;
   color: rgb(246, 246, 246);
   line-height: 1.2;
   text-align: center;
   position: absolute;
-  left: 40.5%;
-  top: 81.5%;
-  z-index: 999;
-  border: none;
-  background-color: none;
+  left: 31%;
+  top: 80%;
+  width: 617px;
+  height: 111px;
+  z-index: 27;
+  padding: auto;
 }
 .signup1{
   font-size: 100px;
