--- a/css/title.css
+++ b/css/title.css
@@ -111,12 +111,14 @@ a:hover {
   line-height: 1.2;
   text-align: center;
   position: absolute;
-  left: 31%;
+  left: 41%;
   top: 80%;
-  width: 617px;
-  height: 111px;
+  width: 277px;
+  height: 38px;
   z-index: 27;
   padding: auto;
+  border: 1px solid black;
+  background-color: black;
 }
 .signup1{
   font-size: 100px;
