--- a/css/title.css
+++ b/css/title.css
@@ -59,19 +59,15 @@ a:hover {
   color: blue; text-decoration: none;
 }
 .Welcome {
-  font-size: 100px;
+  font-size: 700%;
   font-family: "Helvetica";
   font-weight: lighter;
   color: rgb(246, 246, 246);
   line-height: 1.2;
   text-align: center;
   position: absolute;
-  left: 31%;
-  top: 30%;
-  width: 617px;
-  height: 111px;
-  z-index: 27;
-  padding: auto;
+  width: 100%;
+  top: 30%
 }
 #signup{
     background-image: url("Layer 10.png");
@@ -111,14 +107,11 @@ a:hover {
   line-height: 1.2;
   text-align: center;
   position: absolute;
-  left: 41%;
   top: 80%;
-  width: 277px;
-  height: 38px;
-  z-index: 27;
-  padding: auto;
-  border: 1px solid black;
-  background-color: black;
+  width: 100%;
+  border: 1px solid white;
+  background-color: background: #CCC;
+  opacity:0.9; color: black;
 }
 .signup1{
   font-size: 100px;
@@ -128,11 +121,7 @@ a:hover {
   line-height: 1.2;
   text-align: center;
   position: absolute;
-  left: 3%;
-  top: 5%;
   width: 617px;
-  height: 111px;
-  z-index: 27;
 }
 .bubbles{
 
