--- a/css/home.css
+++ b/css/home.css
@@ -250,29 +250,30 @@ body{
   display: none;
   opacity: 0;
 }
-.main-nav-wrapper {
-  text-align: center;
+.main-nav {
   width: 100%;
-  display: inline-block;
-}
-.main-nav-wrapper::before {
-  display: inline-block;
-  height: 100vh;
-  content: '';
-  vertical-align: middle;
+  text-align: middle;
 }
 .main-nav {
   background-color: rgba(255,255,255,0.5);
-  border-radius: 5000px;
+  border-radius: 300px;
   width: 250px;
   height: 250px;
-  display: inline-block;
-  vertical-align: middle;
+  padding: auto;
+  text-align: right;
+}
+.mainwrapper {
+  border-radius: 1em;
+  padding: 1em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%) }
 }
 .main-nav > div {
-  box-sizing: border-box;;
-  display: inline-block;
-  margin: 0;
+  box-sizing: border-box;
+  margin-top: 35px;
   width: 50%;
   height: 30%;
   text-align: center;
