--- a/css/title.css
+++ b/css/title.css
@@ -2,6 +2,8 @@ html {
   height: 100%;
   background: url(../photos/indexcover.jpg) no-repeat center center;
   background-size: cover;
+  font-family: "Helvetica";
+  font-weight: lighter;
 }
 html {
        /* Size of largest container or bigger */
@@ -25,26 +27,6 @@ h3{
   margin-top: .5%;
   margin-right: 0px;
   margin-left: 91%;
-}
-ul {
-    list-style-type: none;
-    margin: 0;
-}
-li {
-    position: center;
-    float: left;
-    display: block;
-    height: 1%;
-    width: 228px;
-    margin-left: 1%;
-    margin-right: 1%;
-    margin-top: 1.5%;
-    margin-right:-1%;
-    margin-bottom: 1.5%;
-    font-family: "helvetica";
-    font-weight:lighter;
-    color: inherit;
-    font-size: 150%;
 }
 a:link {
   color: black; text-decoration: none;
@@ -136,4 +118,41 @@ a:hover {
   opacity: 2;
   -webkit-transform: scale(1.1);
           transform: scale(1.5);
+}
+.mainHeader nav {
+  background: #E1E3E4;
+  background-color: background: #CCC;
+  opacity:0.6; color: #E1E3E4;
+	font-size: 1.343em;
+	height: 50px;
+	line-height: 40px;
+	margin: 0 auto 30px auto;
+	text-align: center;
+	border-radius: 1px;
+	-moz-border-radius: 1px;
+	-webkit-border-radius: 1px;
+  margin: -10px;
+  margin-top: -22px;
+}
+.mainHeader nav ul li {
+	float: left;
+	display: inline;
+}
+
+.mainHeader nav a:link, .mainHeader nav a:visited {
+	color: #01172D;
+	display: inline-block;
+	height: 40px;
+	padding: 5px 23px;
+	text-decoration: none;
+}
+.mainHeader nav a:hover, .mainHeader nav a:active,
+.mainHeader nav .active a:link, .mainHeader nav .active a:visited {
+	background: #008AE6;
+	color: #fff;
+	text-shadow: none !important;
+}
+
+.mainHeader nav li a {
+  margin-right: 5px;
 }
