--- a/css/credits.css
+++ b/css/credits.css
@@ -1,128 +1,41 @@
 html {
-  height: 100%;
-  background: url(indexcover.jpg) no-repeat center center;
-  background-size: cover;
+  font-family: "Helvetica";
+  font-weight: lighter;
 }
-h3{
+.mainHeader nav {
+  background: #E1E3E4;
   background-color: background: #CCC;
-  opacity:0.7; color: black; position: relative;
+  opacity:0.6; color: #E1E3E4;
+	font-size: 1.343em;
+	height: 50px;
+	line-height: 40px;
+	margin: 0 auto 30px auto;
+	text-align: center;
+	border-radius: 1px;
+	-moz-border-radius: 1px;
+	-webkit-border-radius: 1px;
+  margin: -10px;
+  margin-top: -22px;
 }
-.top {
-  background-color: background: #CCC;
-  opacity: .2;
-  background-color: white;
-  position: fixed;
-  margin-left: -.6%;
-  z-index: 9999px;
-  margin-top: -.6%;
+.mainHeader nav ul li {
+	float: left;
+	display: inline;
 }
-#logoimage {
-  position: fixed;
-  margin-top: .5%;
-  margin-right: 0px;
-  margin-left: 91%;
+
+.mainHeader nav a:link, .mainHeader nav a:visited {
+	color: #01172D;
+	display: inline-block;
+	height: 40px;
+	padding: 5px 23px;
+	text-decoration: none;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
+.mainHeader nav a:hover, .mainHeader nav a:active,
+.mainHeader nav .active a:link, .mainHeader nav .active a:visited {
+	background: #008AE6;
+	color: #fff;
+	text-shadow: none !important;
 }
-li {
-    position: center;
-    float: left;
-    display: block;
-    height: 1%;
-    width: 228px;
-    margin-left: 1%;
-    margin-right: 1%;
-    margin-top: 1.5%;
-    margin-right:-1%;
-    margin-bottom: 1.5%;
-    font-family: "helvetica";
-    font-weight:lighter;
-    color: inherit;
-    font-size: 150%;
-}
-a:link {
-  color: black; text-decoration: none;
-}
-a:active {
-  color: gold; text-decoration: none;
-}
-a:visited {
-  color: rgb(246, 246, 246); text-decoration: none;
-}
-a:hover {
-  color: blue; text-decoration: none;
-}
-.Welcome {
-  font-size: 100px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(246, 246, 246);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 27%;
-  top: 30%;
-  width: 617px;
-  height: 111px;
-  z-index: 27;
-}
-#sunimage1{
-    background-image: url("Layer 10.png");
-    position: absolute;
-    left: 80%;
-    top: 8%;
-    width: 207px;
-    height: 199px;
-    z-index: 999px;
-  }
-.login{
-  font-size: 30px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(246, 246, 246);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 83.5%;
-  top: 16%;
-  z-index: 27;
-  border: none;
-  }
-#bottompic{
-  position: absolute;
-  left: 34%;
-  top: 80%;
-  width: 417px;
-  height: 63px;
-  z-index: 999px;
-}
-.Begin_Journey {
-  font-size: 30px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(246, 246, 246);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 42%;
-  top: 81.5%;
-  z-index: 999;
-  border: none;
-  background-color: none;
-}
-.signup1{
-  font-size: 100px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(246, 246, 246);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 3%;
-  top: 5%;
-  width: 617px;
-  height: 111px;
-  z-index: 27;
+
+.mainHeader nav li a {
+  margin-right: 5px;
 }
