--- a/css/title.css
+++ b/css/title.css
@@ -5,22 +5,9 @@ html {
   font-family: "Helvetica";
   font-weight: lighter;
 }
-html {
-       /* Size of largest container or bigger */
-       min-width: 1080px;
-   }
 h3{
   background-color: background: #CCC;
   opacity:0.7; color: black; position: relative;
-}
-.top {
-  background-color: background: #CCC;
-  opacity: .2;
-  background-color: white;
-  position: fixed;
-  margin-left: -.6%;
-  z-index: 9999px;
-  margin-top: -.6%;
 }
 #logoimage {
   position: fixed;
@@ -66,10 +53,8 @@ a:hover {
   font-weight: lighter;
   color: rgb(246, 246, 246);
   line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  left: 83.5%;
-  top: 16%;
+  float: right;
+  margin-top: 10px;
   z-index: 27;
   border: none;
   }
@@ -154,7 +139,7 @@ a:hover {
 }
 
 .mainHeader nav li a {
-  margin-right: 5px;
+  margin-right: -6px;
 }
 @media only screen and (min-width : 150px) and (max-width : 780px)
 {
@@ -164,10 +149,11 @@ a:hover {
 		height: 160px;
 		line-height: 30px;
 		margin-bottom: 0;
+    padding-top: 15px;
 		border-radius: 5px;
 		-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
-    text-align: left;
+    text-align: middle;
 	}
   .mainHeader nav ul {
 		list-style: none;
@@ -204,3 +190,7 @@ a:hover {
 		-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
 	}
+   .Welcome {
+     font-size: 400%;
+     top: 40%
+  }
