--- a/css/credits.css
+++ b/css/credits.css
@@ -1,11 +1,21 @@
 html {
-  height: auto%;
+  height: 100%;
   background: url(../photos/homebackground2.jpg) no-repeat center center;
   background: cover;
   font-family: "Helvetica";
   font-weight: lighter;
   color: white;
   text-align: center;
+  background-attachment: fixed;
+}
+#meet {
+  font-size: 40px;
+}
+.myname {
+  font-size: 25px;
+}
+.minibio {
+  font-size: 17px;
 }
 .mainHeader nav {
   background: #E1E3E4;
