--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,3 +1,12 @@
+html {
+  text-align: center;
+  font-family: "Helvetica";
+  font-weight: lighter;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
 video#bgvid {
 position: fixed;
 top: 20%;
@@ -101,4 +110,9 @@ background-size: cover;
 #welcomeuser{
   width: 100%;
   height: 100%;
+}
+
+#signout{
+  width: 100%;
+  float: right;
 }
