--- a/css/title.css
+++ b/css/title.css
@@ -4,10 +4,22 @@ html {
   background-size: cover;
   font-family: "Helvetica";
   font-weight: lighter;
+  background-attachment: fixed;
 }
 h3{
   background-color: background: #CCC;
   opacity:0.7; color: black; position: relative;
+}
+#begin1 {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 75%;
+}
+.Begin_Journey {
+  border: 1px solid white;
+  font-size: 35px;
+  padding: 1%;
 }
 #logoimage {
   position: fixed;
@@ -65,20 +77,7 @@ a:hover {
   width: 417px;
   height: 63px;
   z-index: 999px;
-}
-.Begin_Journey {
-  font-size: 30px;
-  font-family: "Helvetica";
-  font-weight: lighter;
-  color: rgb(246, 246, 246);
-  line-height: 1.2;
-  text-align: center;
-  position: absolute;
-  top: 80%;
-  width: 100%;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
-}
+}s
 .signup1{
   font-size: 100px;
   font-family: "Helvetica";
