--- a/css/title.css
+++ b/css/title.css
@@ -17,7 +17,10 @@ h3{
   top: 75%;
 }
 .Begin_Journey {
-  border: 1px solid white;
+  border: 3px solid white;
+  border-radius: 3px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
   font-size: 35px;
   padding: 1%;
 }
