--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@ html {
   height: 100%;
   background: url(../photos/homebackground4.jpg) no-repeat center center;
   background-size: cover;
-  font-size: "Helvetica";
+  font-family: "Helvetica";
   font-weight: lighter;
 }
 .mainHeader nav {
@@ -262,3 +262,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     border: none;
     padding: 15px;
     }
+a {
+  text-decoration: none;
+}
