change cursor to be a point when hover over main circle in home.html

--- a/css/home.css
+++ b/css/home.css
@@ -244,6 +244,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
   font-size: 25px;
   padding-top: 11px;
   margin-top: 9px;
+  cursor: pointer;
 }
 
 .innertext:hover{
