--- a/css/subject.css
+++ b/css/subject.css
@@ -6,6 +6,13 @@ html {
   font-weight: lighter;
   background-attachment: fixed;
 }
+h1 {
+  color: white;
+  font-weight: lighter;
+}
+h3 {
+  color: white;
+}
 .mainHeader nav {
   background: #E1E3E4;
   background-color: background: #CCC;
@@ -154,7 +161,7 @@ li {
     font-size: 150%;
 }
 a:link {
-  color: black; text-decoration: none;
+  color: white; text-decoration: none;
 }
 a:active {
   color: gold; text-decoration: none;
@@ -238,7 +245,7 @@ a:hover {
   z-index: 27;
 }
 h1{
-  color: black;
+  color: white;
   font-family: "Helvetica";
   font-weight: lighter;
   padding-top: 7%;
@@ -251,7 +258,7 @@ h1{
   height: 100%;
 }
 #subjecttitle{
-
+  color: white;
 }
 #formwrapper1 {
   background: red;
