--- a/css/title.css
+++ b/css/title.css
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  height: 120%;
   background: url(../photos/indexcover.jpg) no-repeat center center;
   background-size: cover;
   font-family: "Helvetica";
@@ -15,7 +15,7 @@ h3{
   width: 100%;
   text-align: center;
   position: absolute;
-  top: 75%;
+  top: 60%;
   cursor: pointer;
 }
 .Begin_Journey {
@@ -203,11 +203,21 @@ a:hover {
 
 #description {
   text-align: center;
-  width: 98.5%;
-  color: white;
+  width: 100%;
   font-size: 120%;
-  border: 3px solid white;
+  border: 1px solid white;
   border-radius: 5px;
-  margin-top: 50px;
-  padding: 2px;
+  margin-top: 810px;
+  background: lightblue;
+  background-color: #CCC;
+  opacity: .7;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+#fontcolor {
+  color: black;
+}
+#bottom {
+  padding: 80px;
+  padding-left: 90px;
 }
