--- a/css/newlogin.css
+++ b/css/newlogin.css
@@ -1,7 +1,27 @@
 html{
-  background: url(subjectbackground1.jpg) no-repeat center center;
+  height: 100%;
+  background: url(../photos/subjectbackground1.jpg) no-repeat center center;
   font-family: "Helvetica";
   font-weight: lighter;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+#greeting1 {
+  width: 100%;
+  text-align: center;
+  font-size: 30px;
+  color: white;
+  font-family: "Helvetica";
+  font-weight: lighter;
+}
+#loginpage1 {
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  line-height: 3.0;
 }
 .mainHeader nav {
   background: #E1E3E4;
