--- a/css/mypage.css
+++ b/css/mypage.css
@@ -2,6 +2,7 @@ html {
   text-align: center;
   font-family: "Helvetica";
   font-weight: lighter;
+  background: #E6EBF1;
 }
 a {
   text-decoration: none;
@@ -14,12 +15,13 @@ left: 50%;
 min-width: 100%;
 min-height: 100%;
 width: auto;
-height: auto;
+height: auto%;
 z-index: -100;
 -webkit-transform: translateX(-50%) translateY(-50%);
 transform: translateX(-50%) translateY(-50%);
 background: url(polina.jpg) no-repeat center center;
 background-size: cover;
+background-attachment: fixed;
 }
 .mainHeader nav {
   background: #E1E3E4;
@@ -111,7 +113,11 @@ background-size: cover;
   width: 100%;
   height: 100%;
 }
-
+#userbar{
+  border: 2px solid black;
+  margin-top: 50px;
+  margin-left: 20px;
+}
 #signout{
   width: 100%;
   float: right;
