--- a/css/mypage.css
+++ b/css/mypage.css
@@ -8,6 +8,13 @@ a {
   text-decoration: none;
   color: black;
 }
+li {
+  list-style-type: none;
+  line-height: 2.5;
+}
+#hereareyourcourses {
+  font-size: 25px;
+}
 video#bgvid {
 position: fixed;
 top: 20%;
