changes to the login page

--- a/css/newlogin.css
+++ b/css/newlogin.css
@@ -1,9 +1,23 @@
 html{
   height: 100%;
-  background: url(../photos/subjectbackground1.jpg) no-repeat center center;
   font-family: "Helvetica";
   font-weight: lighter;
   background-attachment: fixed;
+}
+video#bgvid {
+position: fixed;
+top: 50%;
+left: 50%;
+min-width: 100%;
+min-height: 100%;
+width: auto;
+height: auto%;
+z-index: -100;
+-webkit-transform: translateX(-50%) translateY(-50%);
+transform: translateX(-50%) translateY(-50%);
+background: url(polina.jpg) no-repeat center center;
+background-size: cover;
+background-attachment: fixed;
 }
 a {
   text-decoration: none;
