--- a/css/credits.css
+++ b/css/credits.css
@@ -22,6 +22,8 @@ html {
 }
 .minibio {
   font-size: 17px;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 .mainHeader nav {
   background: #E1E3E4;
