--- a/css/credits.css
+++ b/css/credits.css
@@ -1,6 +1,7 @@
 html {
   height: 100%;
-  background: url(../photos/homebackground2.jpg) no-repeat center center;
+  width: 100%;
+  background: url(../photos/indexcover.jpg) no-repeat center center;
   background: cover;
   font-family: "Helvetica";
   font-weight: lighter;
