--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,4 +1,6 @@
 html {
+  height: 100%;
+  background: url(../photos/texturebackground.jpg) no-repeat center center;
   text-align: center;
   font-family: "Helvetica";
   font-weight: lighter;
@@ -14,21 +16,6 @@ li {
 }
 #hereareyourcourses {
   font-size: 25px;
-}
-video#bgvid {
-position: fixed;
-top: 50%;
-left: 50%;
-min-width: 100%;
-min-height: 100%;
-width: auto;
-height: auto%;
-z-index: -100;
--webkit-transform: translateX(-50%) translateY(-50%);
-transform: translateX(-50%) translateY(-50%);
-background: url(polina.jpg) no-repeat center center;
-background-size: cover;
-background-attachment: fixed;
 }
 .mainHeader nav {
   background: #E1E3E4;
