--- a/css/credits.css
+++ b/css/credits.css
@@ -1,13 +1,13 @@
 html {
   height: 100%;
-  width: 100%;
-  background: url(../photos/indexcover.jpg) no-repeat center center;
-  background: cover;
+  background: url(../photos/coverimage.jpg) no-repeat center center;
+  background-size: cover;
   font-family: "Helvetica";
   font-weight: lighter;
   color: white;
   text-align: center;
   background-attachment: fixed;
+}
 }
 .biopic:hover{
   opacity: 2;
