--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,10 +1,13 @@
 html {
-  height: 100%;
+  height: 100%
   background: url(../photos/texturebackground.jpg) no-repeat center center;
   text-align: center;
   font-family: "Helvetica";
   font-weight: lighter;
   background: #E6EBF1;
+}
+#centering1 {
+  padding-right: 40px;
 }
 a {
   text-decoration: none;
